<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adibf.adibfakhrimuhtadi_1202154192_m2.MainActivity">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pilihan"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/pilihan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/text_top"
        android:text="@string/pilihan"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pilihan"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/dine_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in"
            android:onClick="pesanMakan"/>


        <RadioButton
            android:id="@+id/take_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"
            android:onClick="pesanMakan"/>

    </RadioGroup>

    <Button
        android:id="@+id/pesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pesan!"
        android:layout_below="@id/button_group"
        android:onClick="metodePesan"
        />
</RelativeLayout>
